<package format="2">
  <name>interactive_markers</name>
  <description>
     3D interactive marker communication library for RViz and similar tools.
  </description>
  <maintainer email="william@osrfoundation.org">William Woodall</maintainer>
  <license>BSD</license>  
  <version>1.11.4</version>

  <author>David Gossow</author>

  <url>http://ros.org/wiki/interactive_markers</url>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rosconsole</depend>
  <depend>rclcpp</depend>
  <depend>rclpy</depend>
  <depend>rostest</depend>
  <depend>std_msgs</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  <depend>visualization_msgs</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>

</package>
